tests/NormalTests/paczka1/small_fuzzy/20887615.err
Error in line 2: sDeGILP A304 43,2
Error in line 3: 5TJ9ZWscmNa S464 54,8
